test code added with clock interface Merge remote-tracking branch 'origin/master'